Added explanation for regression section

--- a/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
+++ b/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
@@ -2041,7 +2041,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section we will discuss regression. Regression is one of the main areas of research in Data Analysis. We will look at plotting the total_bill versus tips.\n",
+    "In this section we will discuss regression. Regression is one of the main areas of research in Data Analysis. We will look at plotting the **total_bill** versus **tip**. \n",
+    "\n",
+    "Once this is plotted we will look at finding the best fit linear regression line and plotting this line on a scatter plot.\n",
     "\n",
     "References:\n",
     "http://www.stat.yale.edu/Courses/1997-98/101/linreg.htm\n",
@@ -2092,8 +2094,19 @@
    "source": [
     "The linear regression is a line that best fits the two plotted variables, the Y variable is the dependant variable i.e the value of *tip* is dependent on *total_bill*\n",
     "\n",
-    "The best line is is the one that minimised the following calcaulation\n",
-    "\n"
+    "The best line is determines by the following summation formula.\n",
+    "\n",
+    "$\\sum_i  (y_i - mx_i - c)^2$\n",
+    "\n",
+    "$y_i - mx_i - c$ is determined mathematically from the formula $y_i = mx_i + c$ which is a straight line with a slope of m, the c constant value is the value of y when x = 0\n",
+    "\n",
+    "i = number of x & y values that have to be squared and summed<br>\n",
+    "x = total_bill that y (tip) is dependent on<br>\n",
+    "y = tip<br>\n",
+    "m = slope of the line<>br\n",
+    "c = constant value line hits the Y axis when x = 0<br>\n",
+    "\n",
+    "The formula is the sum of all the values for each value of x & y (i). for each value of i the point on the plot can be either above or below the line, we want to find a best fit line. So for each value if i this summation is performed. Because some points will be above the line and some points will be below the line, there would be negative numbers this not yield the desired result so rather that taking the absolute negative value and making it positive all values are squared . If you square a negitive number it becomes a positive number. "
    ]
   },
   {
