Added more to Regression section

--- a/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
+++ b/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
@@ -1156,7 +1156,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0xdb939fe320>"
+       "<seaborn.axisgrid.PairGrid at 0xb339faf358>"
       ]
      },
      "execution_count": 7,
@@ -1190,7 +1190,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0xdb95354b70>"
+       "<seaborn.axisgrid.PairGrid at 0xb33b73ea58>"
       ]
      },
      "execution_count": 8,
@@ -2045,14 +2045,14 @@
     "\n",
     "Once this is plotted we will look at finding the best fit linear regression line and plotting this line on a scatter plot.\n",
     "\n",
-    "References:\n",
-    "http://www.stat.yale.edu/Courses/1997-98/101/linreg.htm\n",
-    "https://seaborn.pydata.org/tutorial/regression.html\n"
+    "References:<br>\n",
+    "http://www.stat.yale.edu/Courses/1997-98/101/linreg.htm<br>\n",
+    "https://seaborn.pydata.org/tutorial/regression.html<br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2061,7 +2061,7 @@
        "Text(0, 0.5, 'Tip')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2080,8 +2080,7 @@
    ],
    "source": [
     "# The relationship between total_bill and tips is plotted\n",
-    "#df.loc[:,'tip']\n",
-    "#df.loc[df.loc[:,'sex'] == 'Female']\n",
+    "\n",
     "plt.scatter(df.loc[:,'total_bill'], df.loc[:,'tip'])\n",
     "plt.title('Tip vs Total Bill')\n",
     "plt.xlabel('Total Bill')\n",
@@ -2092,21 +2091,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The linear regression is a line that best fits the two plotted variables, the Y variable is the dependant variable i.e the value of *tip* is dependent on *total_bill*\n",
+    "The linear regression is a line that best fits the two plotted variables, the Y variable is the dependant variable i.e the value of *tip* is dependent on *total_bill*. \n",
     "\n",
-    "The best line is determines by the following summation formula.\n",
+    "The best line is determined by the following summation formula this method is called the **least squares fitting** formula. This is the cost of the line\n",
     "\n",
     "$\\sum_i  (y_i - mx_i - c)^2$\n",
     "\n",
     "$y_i - mx_i - c$ is determined mathematically from the formula $y_i = mx_i + c$ which is a straight line with a slope of m, the c constant value is the value of y when x = 0\n",
     "\n",
-    "i = number of x & y values that have to be squared and summed<br>\n",
-    "x = total_bill that y (tip) is dependent on<br>\n",
-    "y = tip<br>\n",
-    "m = slope of the line<>br\n",
-    "c = constant value line hits the Y axis when x = 0<br>\n",
+    "- i = number of x & y values that have to be squared and summed or the number of dots on the scatter plot above<br>\n",
+    "- x = total_bill that y (tip) is dependent on<br>\n",
+    "- y = tip<br>\n",
+    "- m = slope of the line<br>\n",
+    "- c = constant value line hits the Y axis when x = 0<br>\n",
     "\n",
-    "The formula is the sum of all the values for each value of x & y (i). for each value of i the point on the plot can be either above or below the line, we want to find a best fit line. So for each value if i this summation is performed. Because some points will be above the line and some points will be below the line, there would be negative numbers this not yield the desired result so rather that taking the absolute negative value and making it positive all values are squared . If you square a negitive number it becomes a positive number. "
+    "The formula is the sum of all the distances each value of x & y (i) is away from the line, the (i) or point on the plot can be either above or below the line, we want to find a best fit line. For each value if i this summation is performed. The best line will have the minimum distance from the points on the plot as a whole. Because some points will be above the line and some points will be below the line, there would be negative numbers this will not yield the desired result. Also rather that taking the absolute negative value and making it positive, it is easier to simply squared all the numbers . If you square a negative or even positive number its a positive number. \n",
+    "\n",
+    "For a particular line you need to find out the distance each dot is from the line and sum this total, the best line will be the lowest number of the sum total of each dot's distance from the line. This is the lowest cost (m, c). For example if all the dots were on a straight line then the cost would be zero.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
