Started Regression Calculation

--- a/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
+++ b/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![Image](Images/pythonpandas.JPG \"Image\")\n",
     "\n",
-    "This is an investigation in to the well known tips dataset. This investigation is divided in to four parts see links below.<BR>\n",
+    "This is an investigation in to the well known tips dataset. This investigation is divided in to three parts see links below.<BR>\n",
     "\n",
     "[1. Description](#1.-Description)\n",
     "\n",
@@ -1156,7 +1156,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0xb339faf358>"
+       "<seaborn.axisgrid.PairGrid at 0x556b4c6da0>"
       ]
      },
      "execution_count": 7,
@@ -1190,7 +1190,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0xb33b73ea58>"
+       "<seaborn.axisgrid.PairGrid at 0x556d2597f0>"
       ]
      },
      "execution_count": 8,
@@ -2041,13 +2041,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section we will discuss regression. Regression is one of the main areas of research in Data Analysis. We will look at plotting the **total_bill** versus **tip**. \n",
+    "In this section we will discuss Regression. Regression is one of the main areas of research in Data Analysis. Regression can be used to to see if there is a relationship between an independent variable and dependent variable, the regression statistics can be used to predict the value of the dependent variable when the independent variable is known. We will look at plotting the **total_bill** versus **tip**. \n",
     "\n",
-    "Once this is plotted we will look at finding the best fit linear regression line and plotting this line on a scatter plot.\n",
+    "In regression analysis the independent variable is known as the x value and the dependent variable is known as the y alue\n",
+    "\n",
+    "From the tips dataset the variables assigned to x & y are given below\n",
+    "\n",
+    "x = total_bill<BR>\n",
+    "y = tip\n",
+    "\n",
+    "x is the independent variable and y is the dependent variable, ie the tip variable is determined by the total_bill variable.\n",
     "\n",
     "References:<br>\n",
     "http://www.stat.yale.edu/Courses/1997-98/101/linreg.htm<br>\n",
-    "https://seaborn.pydata.org/tutorial/regression.html<br>\n"
+    "https://seaborn.pydata.org/tutorial/regression.html<br>\n",
+    "http://sphweb.bumc.bu.edu/otlt/MPH-Modules/BS/BS704_Multivariable/BS704_Multivariable5.html<br>\n"
    ]
   },
   {
@@ -2091,26 +2099,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The linear regression is a line that best fits the two plotted variables, the Y variable is the dependant variable i.e the value of *tip* is dependent on *total_bill*. \n",
+    "The scatter plot show a direct or positive relationship between **total_bill** and **tip**. The higher the total_bill was the higher the tip is likely to be, similarily a low total_bill would result in a lower tip. \n",
     "\n",
-    "The best line is determined by the following summation formula this method is called the **least squares fitting** formula. This is the cost of the line\n",
+    "The linear regression is a line that best fits the two plotted variables, the Y variable is the dependant variable i.e the value of **tip** is dependent on **total_bill**. \n",
+    "\n",
+    "The best line is determined by minimising the following summation formula of all the points of the scatter plot this method is called the **least squares fitting** formula. \n",
     "\n",
     "$\\sum_i  (y_i - mx_i - c)^2$\n",
     "\n",
-    "$y_i - mx_i - c$ is determined mathematically from the formula $y_i = mx_i + c$ which is a straight line with a slope of m, the c constant value is the value of y when x = 0\n",
+    "Each variable and its description is given below.\n",
     "\n",
-    "- i = number of x & y values that have to be squared and summed or the number of dots on the scatter plot above<br>\n",
-    "- x = total_bill that y (tip) is dependent on<br>\n",
+    "- i = number of x & y values that have to be squared and summed above.<br>\n",
+    "- x = total_bill, the value of y (tip) is dependent on the value of x. <br>\n",
     "- y = tip<br>\n",
     "- m = slope of the line<br>\n",
-    "- c = constant value line hits the Y axis when x = 0<br>\n",
+    "- c = Value if Y axis when x = 0 or Y intercept.<br>\n",
     "\n",
-    "The formula is the sum of all the distances each value of x & y (i) is away from the line, the (i) or point on the plot can be either above or below the line, we want to find a best fit line. For each value if i this summation is performed. The best line will have the minimum distance from the points on the plot as a whole. Because some points will be above the line and some points will be below the line, there would be negative numbers this will not yield the desired result. Also rather that taking the absolute negative value and making it positive, it is easier to simply squared all the numbers . If you square a negative or even positive number its a positive number. \n",
+    "$y_i - mx_i - c$ is determined mathematically from the formula $y_i = mx_i + c$ which is a straight line with a slope of **m, c** is a constant, i.e the value of y when x = 0 or Y intercept.  \n",
     "\n",
-    "For a particular line you need to find out the distance each dot is from the line and sum this total, the best line will be the lowest number of the sum total of each dot's distance from the line. This is the lowest cost (m, c). For example if all the dots were on a straight line then the cost would be zero.\n",
+    "$y_i - mx_i - c$ is the measured value from the dataset so for each value of y_i there is a corresponding value x_i.\n",
     "\n",
+    "$y_i = mx_i + c$ is the modeled value this is the straight line\n",
     "\n",
-    "\n"
+    "The difference between the modeled value and the measured value squared for each value i.\n",
+    "\n",
+    "The summation formula is the sum of all the distances each value of x & y (i) or points on the scatter plot is away from a straight line, the (i) or point on the scatter plot can be either above or below the line. \n",
+    "\n",
+    "For each value of i the summation is performed. The best line will have the minimum distance from all the points on the plot as a whole. As some points will be above the line and some points will be below the line there will be negative numbers this will not yield the desired result. One possible solution is to take the absolute value from the negative numbers and make it positive but it is easier to simply square all the numbers. If you square a negative or even positive number you will get a positive number. \n",
+    "\n",
+    "For a particular line you need to find out the distance each dot is from the line and sum this total, the best line will be the lowest value or **Cost(m, c)** of the sum total of each dot's distance from the line. For example if all the dots were on a straight line then the cost would be zero hence the name **least squares fitting** formula.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.785942622950824\n",
+      "2.9982786885245902\n",
+      "78.92813148851113\n",
+      "1.9066085124966428\n"
+     ]
+    }
+   ],
+   "source": [
+    "#To find out the relationship between the variables total_bill and tip we need to perform the following calculation\n",
+    "\n",
+    "#Find the mean value of both total_bill & tip\n",
+    "avg_totalbill = np.mean(df.loc[: , \"total_bill\"])\n",
+    "print(avg_totalbill)\n",
+    "\n",
+    "avg_tip = np.mean(df.loc[: , \"tip\"])\n",
+    "print(avg_tip)\n",
+    "\n",
+    "#Find the variance of both total_bill & tip \n",
+    "var_totalbill = np.var(df.loc[: , \"total_bill\"])\n",
+    "print(var_totalbill)\n",
+    "\n",
+    "var_tip = np.var(df.loc[: , \"tip\"])\n",
+    "print(var_tip)"
    ]
   },
   {
