--- a/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
+++ b/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
@@ -1177,6 +1177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be seen from the statistics and that there are approximately 2/3 male to 1/3 female bill payers. It can be seen from the plot above that the majority of the female bills are between 10 & 20. The majority of the male are between 12 & 28, it can be seen that the male bills are on average higher than the female bills."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1200,6 +1207,13 @@
     "plt.legend()\n",
     "plt.show()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot above shows a the probability distribution for total_bill in the male and female category, the highest probability of a male bill is 0.5 and that amount was approx 18. The female bill probability was over 0.6 at 15 "
    ]
   },
   {
