Edited conclusion section

--- a/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
+++ b/Fundamentals-of-Data-Analysis-Assessment-2019.ipynb
@@ -2682,14 +2682,14 @@
    "source": [
     "### Conclusions\n",
     "   * There is not much of a difference between smoking and non smoking bill payers, except for when the bills get higher ie over 25 smoking bill payers leave less tip.\n",
-    "   * There are more occurances of higher male total_bills than female. Male Female bills and tips are evenly matched up to where the bill exceeds appros 25\n",
+    "   * There are more occurances of higher male total_bills than female. Male Female bills and tips are evenly matched up to where the bill exceeds approx 25\n",
     "   * The total_bill amount increases as the size of the party increases as does the tip.\n",
     "   * The time of day has an effect on the total_bill and therefore the tip, with more lunches in the lower total_bill and tip amount, while dinner is more frequent in the higher total_bill and tip amount.\n",
-    "   * There is no much of a difference between smokers vs non-smokers in the amount of tip, the only obvious difference there are more non-smokers that smokers.\n",
+    "   * There is not much of a difference between smokers vs non-smokers in the amount of tip, the only obvious difference there are more non-smokers that smokers.\n",
     "   * The average tip increases from Thurs to Fri, it drops on Saturday, then increases again on Sunday. \n",
-    "   * There is a better chance of getting a higher tip if the bill payer is male. But the average tip on Fri and Sunday was higher from Female. The general trend as a waiter you tip is probably going to be higher if the bill payer is male.\n",
-    "   * During the week day Thur lunch was more common, Friday was a mix of Lunches and Dinners, while majority of sittings were dinner on Saturday and Sunday. The general trend that total_bills and therefor tips were higher at the weekend during dinner time.\n",
-    "   * There is lots of information you can get from filtering out for example by the days of the week or on the amount of tip, for example the dataset was filtered for tips equal or under 1.00, we found there were no tips under 1.00 there were four at 1, that is a very small percentage out of 244 3/4 of these 1.00 tips were female but the total_bill was low, the single male who left 1.00 tip had the highest total_bill out of the four and it was a party size of 2 and was a smoker.\n",
+    "   * There is a better chance of getting a higher tip if the bill payer is male. But the average tip on Fri and Sunday was higher from Female. The general trend as a waiter your tip is probably going to be higher if the bill payer is male and its dinner time at the weekend.\n",
+    "   * On Thur lunch was more common, Friday was a mix of Lunches and Dinners, while majority of sittings were Dinner on Saturday and Sunday. The general trend that total_bills and therefore tips were higher at the weekend during Dinner time.\n",
+    "   * There is lots of information you can get from filtering the dataset by the days of the week or on the amount of tip, for example the dataset was filtered for tips equal or under 1.00, we found there were no tips under 1.00 there were four at 1.00, that is a very small percentage out of 244 samples, 3/4 of these 1.00 tips were female but the total_bill was low, the single male who left 1.00 tip had the highest total_bill out of the four, it was a party size of 2 and he was a smoker.\n",
     "   * The seaborn pairplots give a summary of the data that was plotted in separate plots in one large plot containing subplots"
    ]
   }
